use docker, podman doesnt exist lol

--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ branding:
   icon: package
   color: blue
 runs:
-  using: podman
+  using: docker
   image: Containerfile
   args:
     - "${{ inputs.path }}"
