complete remodel of repo, let's see how much i messed up

--- a/.github/actions/docker/Dockerfile
+++ b/.github/actions/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM docker.io/archlinux/archlinux:base-devel
 
 COPY system_files /
 
-RUN pacman -Syu --noconfirm --needed git wget namcap sudo pacman-contrib namcap tree
+RUN pacman -Syu --noconfirm --needed git wget namcap sudo pacman-contrib namcap tree github-cli
 
 # Create build user
 RUN useradd -m --shell=/bin/bash build && usermod -L build && \
