--- a/action.yml
+++ b/action.yml
@@ -22,7 +22,7 @@ runs:
   using: composite
   steps:
     - name: Run makepkg on any available PKGBUILDs
-      uses: actions/docker@main
+      uses: ./.github/actions/docker
 
     - name: Delete possible leftover temporary release
       shell: bash
