add repo_name input

--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,7 @@ runs:
     - name: Run makepkg on any available PKGBUILDs
       uses: hecknt/makepkg-action@v0.1.0
       with:
+        repo_name: "${{ inputs.repo_name }}"
         gpg_key_id: "${{ inputs.gpg_key_id }}"
         gpg_key_data: "${{ inputs.gpg_key_data }}"
 
