--- a/action.yml
+++ b/action.yml
@@ -23,6 +23,8 @@ runs:
   steps:
     - name: Checkout
       uses: actions/checkout@v6
+      with:
+        submodules: "recursive"
 
     - name: Run makepkg on any available PKGBUILDs
       uses: hecknt/makepkg-action@v0.1.0
